--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
 body{
 	background-color: azure;
+}
+nav{
 	text-align: center;
 }
+.main.png{
+	margin: 40px;
+	width: 70rem;
+	height: 25rem
+}
+h4{
+	margin-bottom: auto;
+	margin-left:auto;
+}
 .btn{
-	text-decoration:none;
+	
 	font-size:3.5rem;
 	color: white;
 	padding: 10px 20px 10px 20px;
@@ -35,6 +46,7 @@ h1{
 	background-color: #52d886;
 	border-bottom: 5px solid #47cb7a;
 	font-size: 2.4rem;
+	
 }
 .btn.admin{
 	background-color: #52d886;
